--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -202,3 +202,7 @@ body .navbar {
     padding-bottom: 20px;
     text-shadow: 0 0 10px rgba(0,0,0,.5);
 }
+
+#jumbotron-wrapper .jumbotron {
+    background-color: transparent;
+}
