--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,43 +39,13 @@
                   </div>
                   <div class="modal-body" style="display:inline">
                         <div class="row">
-                            <div class="col-md-2">
-                                <p>Test paragraph 1</p>
+                            <div class="col-md-3" style="overflow:hidden">
+                                <img src="{{posters.profile}}"/>
                             </div>
-                            <div class="col-md-4">
-                                <p>Test paragraph 2</p>
+                            <div class="col-md-9">
+                                <p style="display:inline">{{synopsis}}</p>
                             </div>
                         </div>
-<div class="container">
-<div class="row">
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-  <div class="col-md-1">.col-md-1</div>
-</div>
-<div class="row">
-  <div class="col-md-8">.col-md-8</div>
-  <div class="col-md-4">.col-md-4</div>
-</div>
-<div class="row">
-  <div class="col-md-4">.col-md-4</div>
-  <div class="col-md-4">.col-md-4</div>
-  <div class="col-md-4">.col-md-4</div>
-</div>
-<div class="row">
-  <div class="col-md-6">.col-md-6</div>
-  <div class="col-md-6">.col-md-6</div>
-</div>
-</div>
-                    <p style="display:inline">{{synopsis}}</p>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
