--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
         <script type="text/template" id="intheaters_template">
             <div id="header" class="text-center">
                 <h1>Currently In Theaters</h1>
-                <p>Click on a movie to see more information. Numbers represent critic&#39s ratings.</p>
+                <p>Click on a movie to see more information. Numbers represent critics&#39 ratings.</p>
             </div>
             {{#.}}
             <div class="tile" href="#">
@@ -71,7 +71,8 @@
                 <div id="header" class="text-center">
                     <button type="button" id="choose" class="btn btn-default">GO</button>
                     <h2 class="text-center">Choose Movies</h2>
-                    <p style="text-align: center">Select at least two movies you would like to see. We will tell you the most efficient way to see two at a time.</p>
+                    <p>Select at least two movies you would like to see. We will tell you the most efficient way to see two at a time.</p>
+                    <p>Click on a movie for a synopsis and showtimes. Numbers represent critics&#39 ratings.</p>
                 </div>
                 {{#.}}
                 <div class="tile" href="#">
@@ -104,6 +105,14 @@
                                     <h4>Synopsis</h4>
                                     <p style="display:inline">{{synopsis}}</p>
                                 </div>
+                            </div>
+                            <h3>Showtimes</h3>
+                            <div class="row">
+                                {{#display_showtimes}}
+                                    <div class="col-md-1">
+                                        {{.}}
+                                    </div>
+                                {{/display_showtimes}}
                             </div>
                       </div>
                       <div class="modal-footer">
@@ -262,7 +271,7 @@
                             <span class="glyphicon glyphicon-hand-up"></span>
                         </div>
                         <h3>Select Movies</h3>
-                        <p>Select at least two movies you want to see. You can click on each movie to get more information about the movie. We'll tell you the most time efficient way to watch two movies.</p>
+                        <p>Select at least two movies you want to see. You can click on each movie to get more information. We'll tell you the most time efficient way to watch two movies.</p>
                     </div>
                     <div class="col-md-4">
                         <div class="text-center">
