error alert message won't repeat

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,6 +68,7 @@
         </script>
         <script type="text/template" id="theater_template">
             <div id="theater-results">
+            <div id="error" class="text-center"></div>
                 <div id="header" class="text-center">
                     <button type="button" id="choose" class="btn btn-default">GO</button>
                     <h2 class="text-center">Choose Movies</h2>
