--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -233,6 +233,9 @@
       <li><a id="goto-movies" href="#">Movies</a></li>
       <li><a href="#current-movies">Current Movies</a></li>
     </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="contact">Contact</a></li>
+    </ul>
   </div>
 </nav>
     <div id="content">
@@ -306,6 +309,16 @@
             <section id="movies" style="display:block">
 
             </section>
+        </div>
+
+        <div class="container"><div class="divider"></div></div>
+
+        <div id="contact">
+            <a name="contact"></a>
+            <div id="header" class="text-center">
+                <h1>Contact</h1>
+                <p>Movie Day was created by Max Breakwell and Joe Meissler. If you have any questions, comments, or feedback please don't hesitate to reach us.</p>
+            </div>
         </div>
     </div>
 </body>
