--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -221,9 +221,9 @@ body .jumbotron {
 body .navbar {
     border-radius: 0px;
 }
-
 #contact {
-    padding-bottom: 500px;
+    position: absolute;
+    width: 100%; height: 100%;
     background-image: url('../images/273.jpg');
-    background-position: center;
+    background-position: bottom center;
 }
