updated email, center movie section

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -38,7 +38,7 @@
   <a name="contact"></a>
   <div id="header" class="text-center">
       <h1>Contact</h1>
-      <p>Movie Day was created by <a href="https://github.com/maxbreakwell" target="_blank">Max Breakwell</a> and <a href="https://github.com/stickperson" target="_blank">Joe Meissler</a>. If you have any questions, comments, or feedback please don't hesitate to <a href="mailto:movieday@gmail.com?Subject=Hello!" target="_top">contact us</a>.</p>
+      <p>Movie Day was created by <a href="https://github.com/maxbreakwell" target="_blank">Max Breakwell</a> and <a href="https://github.com/stickperson" target="_blank">Joe Meissler</a>. If you have any questions, comments, or feedback please don't hesitate to <a href="mailto:moviedayapp@gmail.com?Subject=Hello!" target="_top">contact us</a>.</p>
   </div>
 </div>
 </body>
