--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -306,7 +306,7 @@
         <div class="container"><div class="divider"></div></div>
         <div id="intheaters-wrapper">
             <a name="current-movies"></a>
-            <section id="movies" style="display:block">
+            <section id="movies" style="display:block; text-align:center">
 
             </section>
         </div>
